--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
         <div id="unity-build-title">TittUt</div>
+        <p><a href="images/GDPR.pdf" >Privacy Policy</a></p>
       </div>
     </div>
     <script>
